--- a/README.Rmd
+++ b/README.Rmd
@@ -8,18 +8,21 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "figures/",
+  fig.path = "man/figures/README-",
   out.width = "100%"
 )
 ```
 
-![](figures/microshades_logo.png)
+```{r, echo = FALSE, fig.align='center'}
+knitr::include_graphics("man/figures/microshades_logo.png")
+```
+
 
 <!-- badges: start -->
 <!-- badges: end -->
 
 The goal of microshades is to provide a custom color organization palette that can be applied to enhance current data visualization methods. 
-To increase accessibility of visuals created, users may select to use color vision deficient friendly colors.
+To increase accessibility of visuals created, users may select to use color vision deficient (CVD) friendly colors.
 
 
 This package includes functions that work with phyloseq organized microbiome data to create stacked bar plots with advanced color organization.  With microshades color organization, plots are more intuitive and accessible.
@@ -30,17 +33,15 @@ Additionally, microshades colors can be incorporated into any plot by using our 
 
 ## Installation
 
-Install microshades with devtools.
-
 ``` r
-devtools::install_github("KarstensLab/microshades")
+remotes::install_github("KarstensLab/microshades")
 ```
 
 ## The shades
 
 Here is a list of the microshades palettes, including the CVD friendly shades
 
-```{r shades}
+```{r shades, warning = FALSE}
 library(microshades)
 
 #default shades
@@ -68,14 +69,17 @@ microshades_palette("micro_cvd_blue")
 
 For detailed tutorials on how to use microshades function with phyloseq objects, please reference the following vignettes.
 
-- [Global Patterns](./vignettes/microshades-GP.html)
-- [Human Microbiome Project](./vignettes/microshades-HMP.html)
-- [Human Microbiome Project 2](./vignettes/microshades-HMP2.html)
-- [Curated Metagenomic Data](./vignettes/microshades-CMD.html)
+- [Global Patterns](https://KarstensLab.github.io/Microshades/articles/microshades-GP.html)
+- [Human Microbiome Project](https://KarstensLab.github.io/Microshades/articles/microshades-HMP.html)
+- [Human Microbiome Project 2](https://KarstensLab.github.io/Microshades/articles/microshades-HMP2.html)
+- [Curated Metagenomic Data](https://KarstensLab.github.io/Microshades/articles/microshades-CMD.html)
 
 Here is an example of the plot generated with microshades on Curated Metagenomic Data of the Human Microbiome.
 
-![](figures/plot_CMD.png)
+```{r, echo = FALSE, fig.align='center'}
+knitr::include_graphics("man/figures/plot_CMD.png")
+```
+
 microshades uses coloring to correspond with taxonomic group and subgroup levels. 
 In this example, the phylum and genus information are explored. 
 Darker shades indicate the most abundant genera for each phylum, and lighter shades are less abundant.
