added new feature to the microshades_palette(), users can select lightest or darkest shades

--- a/README.Rmd
+++ b/README.Rmd
@@ -91,6 +91,7 @@ Below is an example of how to apply the color palettes to a different type of pl
 
 ```{r plot example}
 library(palmerpenguins)
+library(dplyr)
 library("ggplot2")
  
 data(package = 'palmerpenguins')
@@ -99,4 +100,61 @@ ggplot(penguins, aes(species, fill = island)) + geom_bar() +
          scale_fill_manual(values = microshades_palette("micro_green"))
        
 ```
+
+
+```{r}
+penguins_mod <- penguins %>% mutate(combination_variable = paste(species, year, sep = "-"))
+
+hex_values <-c(microshades_palette("micro_green", 3, lightest = FALSE), 
+               microshades_palette("micro_blue", 3, lightest = FALSE), 
+               microshades_palette("micro_purple", 3, lightest = FALSE))
+
+ggplot(penguins_mod, aes(x = flipper_length_mm,
+                            y = body_mass_g)) +
+  geom_point(aes(color = combination_variable)) +
+  theme_minimal() +
+  scale_color_manual(values = hex_values, na.translate = FALSE) +
+  labs(title = "Penguin flipper and body mass",
+       x = "Flipper length (mm)",
+       y = "Body mass (g)",
+       color = "Penguin Species and Year") +
+  theme(legend.position = "bottom",
+        legend.background = element_rect(fill = "white", color = NA),
+        plot.title.position = "plot",
+        plot.caption = element_text(hjust = 0, face= "italic"),
+        plot.caption.position = "plot") +
+  facet_wrap(~species)
+
+```
+
+```{r}
+
+
+  
+bill_len_dep <- ggplot(data = penguins_mod,
+                         aes(x = bill_length_mm,
+                             y = bill_depth_mm,
+                             group = combination_variable)) +
+  geom_point(aes(color = combination_variable),
+             size = 3,
+             alpha = 0.8) +
+  geom_smooth(method = "lm", se = FALSE, aes(color = combination_variable)) +
+  theme_minimal() +
+  scale_color_manual(values = hex_values, na.translate = FALSE) +
+  labs(title = "Penguin bill dimensions",
+       subtitle = "Bill length and depth for Adelie, Chinstrap and Gentoo Penguins at Palmer Station LTER over the years 2007-2009",
+       x = "Bill length (mm)",
+       y = "Bill depth (mm)",
+       color = "Penguin species",
+       shape = "Penguin species") +
+  theme(legend.position = "right",
+        legend.background = element_rect(fill = "white", color = NA),
+        plot.title.position = "plot",
+        plot.caption = element_text(hjust = 0, face= "italic"),
+        plot.caption.position = "plot")
+
+bill_len_dep
+
+```
+
 
