--- a/README.Rmd
+++ b/README.Rmd
@@ -21,16 +21,7 @@ knitr::include_graphics("man/figures/microshades_logo.png")
 <!-- badges: start -->
 <!-- badges: end -->
 
-The microshades R package is designed to provide custom color shading palettes that improve accessibility and data organization. Approximately 300 million people in the world have Color Vision Deficiency (CVD), which is comparable to the most recent estimate of the US population. When creating  figures and graphics that use color, it is important to consider that individuals with CVD will interact with this material, and may not perceive all of the information tied to the colors correctly. 
-
-
-
-This package includes two crafted color palettes,  microshades_cvd_palettes and microshades_palettes. Each color palette contains six base colors with five incremental light to dark shades, for a total of 30 available colors per palette type that can be directly applied to any plot. The microshades_cvd_palettes contain colors that are universally CVD friendly. The individual microshades_palettes are CVD friendly, but when used in conjunction with multiple microshades_palettes, are not universally accessible.
-
-
-
-In addition to color palettes, this package can also be used in conjunction with the R package phyloseq to enhance microbiome data visualization. The microshades functions create stacked bar plots from phyloseq objects, color organized by a data-driven hierarchy. The accessibility and advanced color organization features described help data reviewers and consumers notice visual patterns and trends easier. 
-
+The microshades R package is designed to provide custom color shading palettes that improve accessibility and data organization. Approximately 300 million people in the world have Color Vision Deficiency (CVD), which is comparable to the most recent estimate of the US population. When creating  figures and graphics that use color, it is important to consider that individuals with CVD will interact with this material, and may not perceive all of the information tied to the colors correctly. This package includes carefully crafted palettes that improve CVD accessibility and may be applied to any plot. Additionally, there are functions to apply microshades palettes to microbiome data in a color-oriented orginazation. 
 
 
 
@@ -47,45 +38,63 @@ If you are having trouble with installation, you may need to install packages su
 
 ## The shades
 
-Here is a list of the microshades palettes, including the CVD friendly shades
+Here are the two crafted color palettes,  microshades_cvd_palettes and microshades_palettes. Each color palette contains six base colors with five incremental light to dark shades, for a total of 30 available colors per palette type that can be directly applied to any plot.
 
-```{r shades, warning = FALSE}
-library(microshades)
-
-# main shades
-names(microshades_palettes)
-
-# cvd shades
-names(microshades_cvd_palettes)
-
+```{r, echo = FALSE, fig.align='center', fig.width= 5, fig.height=4}
+knitr::include_graphics("man/figures/microshades_all.png")
 ```
 
-To view any shade, use the function `microshades_palette` and specify the shade to view.
 
-```{r blue, fig.height = 1, fig.width = 4}
-microshades_palette("micro_blue")
+### CVD Visualization
+
+The palettes above provide accesibilty to individuals with CVD. Below are visualizations of the palettes under a [CVD simulation](http://hclwizard.org:3000/cvdemulator). 
+
+
+
+The three main types of CVD
+
+- Deuteranope : This is the most common type of CVD, also know as "red-green color blindness"
+- Protanope : Less common than Deuteranope, described as mutated red pigment and less ability to discriminate colors 
+- Tritanope : Relatively Rare, also known as "blue-yellow color blindness"
+
+#### microshades_cvd_palettes
+
+The microshades_cvd_palettes contain colors that are universally CVD friendly. 
+
+```{r, echo = FALSE, fig.align='center', fig.width= 5, fig.height=4}
+knitr::include_graphics("man/figures/microshades_cvd_palettes_cvd.png")
 ```
 
-The CVD shades use the same function.
+#### microshades_palettes
 
-```{r cvd_blue, fig.height = 1, fig.width = 4}
-microshades_palette("micro_cvd_blue")
+The individual microshades_palettes are CVD friendly, and some microshades_palette combinations are universially CVD friendly. When using multiple microshades_palettes carefully consider color palette choices, since they may not be universally accessible. 
+
+```{r, echo = FALSE, fig.align='center', fig.width= 5, fig.height=4}
+knitr::include_graphics("man/figures/microshades_palettes_cvd.png")
 ```
+
+
 
 To learn more about the different functions and shades in microshades, please visit the [reference](https://KarstensLab.github.io/microshades/reference) section of our website.
 
 ## Phyloseq Combatibility
 
-For detailed tutorials on how to use microshades function with phyloseq objects, please review the [vignette articles](https://KarstensLab.github.io/microshades) on the website.
+In addition to color palettes, this package can also be used in conjunction with the R package phyloseq to enhance microbiome data visualization. The microshades functions create stacked bar plots from phyloseq objects, color organized by a data-driven hierarchy. The accessibility and advanced color organization features described help data reviewers and consumers notice visual patterns and trends easier. 
 
+For detailed tutorials on how to use microshades function with phyloseq objects, please review the vignettes provided:
 
-Below is an example of a plot generated with microshades on Curated Metagenomic Data of the Human Microbiome. On the left is the original stacked barplot made using phyloseq. On the right are two barplot of the same data, with microshades palettes and functions applied.
+- [Curated Metagenomic Data](https://karstenslab.github.io/microshades/articles/microshades-CMD.html)
+- [Global Patterns](https://karstenslab.github.io/microshades/articles/microshades-GP.html)
+- [Human Microbiome Project](https://karstenslab.github.io/microshades/articles/microshades-HMP.html)
+- [Human Microbiome Project 2](https://karstenslab.github.io/microshades/articles/microshades-HMP2.html)
+
+Below is an example of a plot generated with microshades on Curated Metagenomic Data of the Human Microbiome. On the left is the original stacked barplot made using phyloseq. On the right are two barplot of the same data, with microshades palettes and functions applied. microshades uses coloring to correspond with taxonomic group and subgroup levels. 
 
 ```{r, echo = FALSE, fig.align='center'}
 knitr::include_graphics("man/figures/plot_CMD.png")
 ```
 
-microshades uses coloring to correspond with taxonomic group and subgroup levels. 
+
 In this example, the phylum and genus information are explored. 
 Darker shades indicate the most abundant genera for each phylum, and lighter shades are less abundant.
 Users can additionally reorder the samples based on a specified taxonomic rank and name, or reorder the phylum groups.
@@ -93,85 +102,19 @@ Users can additionally reorder the samples based on a specified taxonomic rank a
 
 ## Apply the microshades palette to non-microbiome data
 
-To apply a microshades palette color to a plot, use `scale_fill_manual()`.
-
-The following examples use the palmerpenguins dataset to show how to apply the color palettes to non-microbiome data.
-
-This first example examines the number of each species of penguin. The different color shades represent the island that the penguin was located. 
-
-```{r plot example}
-library(palmerpenguins)
-library(dplyr)
-library("ggplot2")
- 
-data(package = 'palmerpenguins')
-
-ggplot(penguins, aes(species, fill = island)) + geom_bar() + 
-         scale_fill_manual(values = microshades_palette("micro_green"))
-       
-```
+Users can apply a microshades palette color to a plot using `scale_fill_manual()` to set the custom colors and `microshades_palette()` to select a desired palette.
 
 
+Please refer to the following examples with microshades on non-microbiome:
 
-This next example examines the flipper length to body mass measurements between different penguin species. To add an enhanced detail to the visual, a combination variable was created in this example that contains the species and year. The different base colors represent the species and the shades represent the year that the data was collected. 
-
-
-
-```{r}
-penguins_mod <- penguins %>% mutate(combination_variable = paste(species, year, sep = "-"))
-
-hex_values <-c(microshades_palette("micro_green", 3, lightest = FALSE), 
-               microshades_palette("micro_blue", 3, lightest = FALSE), 
-               microshades_palette("micro_purple", 3, lightest = FALSE))
-
-ggplot(penguins_mod, aes(x = flipper_length_mm,
-                            y = body_mass_g)) +
-  geom_point(aes(color = combination_variable)) +
-  theme_minimal() +
-  scale_color_manual(values = hex_values, na.translate = FALSE) +
-  labs(title = "Penguin flipper and body mass",
-       x = "Flipper length (mm)",
-       y = "Body mass (g)",
-       color = "Penguin Species and Year") +
-  theme(legend.position = "bottom",
-        legend.background = element_rect(fill = "white", color = NA),
-        plot.title.position = "plot",
-        plot.caption = element_text(hjust = 0, face= "italic"),
-        plot.caption.position = "plot") +
-  facet_wrap(~species)
-
-```
+- [Palmer Penguins Data Vignette](https://karstenslab.github.io/microshades/articles/non-microbiome_data.html) 
+- [Titanic Data](https://karstenslab.github.io/microshades/articles/titanic_data_example.html) 
 
 
+The example below uses the palmerpenguins dataset to show how to apply the color palettes to non-microbiome data. This first plot contains the default colors from ggplot and is colored by species. The second plot uses microshades colors for a combination variable of penguin species and year of data collection. This organization can help data reviewers notice trends easier with more variables visible in the data. 
 
-This last example examines the bill length to depth measurements between different penguin species. The combination variable generated for the previous example is used for this plot as well. The different base colors represent the species and the shades represent the year that the data was collected. 
-
-
-```{r}
- 
-bill_len_dep <- ggplot(data = penguins_mod,
-                         aes(x = bill_length_mm,
-                             y = bill_depth_mm,
-                             group = combination_variable)) +
-  geom_point(aes(color = combination_variable),
-             size = 3,
-             alpha = 0.8) +
-  geom_smooth(method = "lm", se = FALSE, aes(color = combination_variable)) +
-  theme_minimal() +
-  scale_color_manual(values = hex_values, na.translate = FALSE) +
-  labs(title = "Penguin bill dimensions",
-       x = "Bill length (mm)",
-       y = "Bill depth (mm)",
-       color = "Penguin species",
-       shape = "Penguin species") +
-  theme(legend.position = "right",
-        legend.background = element_rect(fill = "white", color = NA),
-        plot.title.position = "plot",
-        plot.caption = element_text(hjust = 0, face= "italic"),
-        plot.caption.position = "plot")
-
-bill_len_dep
-
+```{r, echo = FALSE, fig.align='center'}
+knitr::include_graphics("man/figures/penguin_example.png")
 ```
 
 
